[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/enemies/LavaBoy.png" type="Texture" id=1]
[ext_resource path="res://src/enemies/LavaBoy.gd" type="Script" id=2]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float progress : hint_range(0, 1);

uniform float diamondPixelSize = 2.0f;

void fragment() {
	float xFraction = fract(FRAGCOORD.x / diamondPixelSize);
	float yFraction = fract(FRAGCOORD.y / diamondPixelSize);
	if (xFraction + yFraction > progress * 2f) {
		discard;
	}
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 4 )
shader_param/progress = 0.0
shader_param/diamondPixelSize = 2.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "load"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="LavaBoy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
GRAVITY = 5.5
TERMINAL_VELOCITY = 250

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="PopTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fade = SubResource( 7 )
anims/load = SubResource( 3 )

[node name="PrePopTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CheckTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 20
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="PositionTimer" to="." method="_on_PositionTimer_timeout"]
[connection signal="timeout" from="PopTimer" to="." method="_on_PopTimer_timeout"]
[connection signal="timeout" from="PrePopTimer" to="." method="_on_PrePopTimer_timeout"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_CheckTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
